--- a/style.css
+++ b/style.css
@@ -3,18 +3,43 @@
   padding: 0;
 }
 
-.centralisar{
+ /* .centralisar{
   text-align: -webkit-center;
+  align-content: flex-start  */
+  
+  
+/* } */
+
+.tudo{
+  margin: 2cm 100cm 3cm 12cm
+  /* text-align: -webkit-center;
+  align-content: flex-start  */
+  /* background-position: center; */
+  /* margin: 35px 70px 50px 90px;
+   */
+
+   
+  
+  
+  
   
 }
 
 footer {
-  background-color:  rgb(15, 100, 137);
- padding-bottom: 25%;
+  background-color:  #0d6360;
+ padding-bottom: 5%;
+ color: white;
+ padding-left: 10px;
+
 }
 
 .header{
-  background-color: rgb(15, 100, 137);
+  background-color: rgb(96, 150, 91);
+  color: white;
+  padding-bottom: 1%;
+  font-size: 25px;
+  
+  text-align: center;
 }
 
 .data{
@@ -22,11 +47,68 @@ footer {
 }
 
 th{
-  padding: 10px;
+  padding: 15px;
 
 }
 
-.logo{
-  padding-left: 300px;
+
+.espaco{
+  padding: 40px;
+}
+
+.time{
+padding-right: 7cm;
+padding-left: 7cm;
+
+  font-size: 20px;
+  padding-top: 1.5cm;
+  padding-bottom: 1.5cm;
+  font-size: 30px;
+ 
   
+}
+
+.imgs{
+  height: 55px;
+  width: 55px;
+ display: flex;
+ padding-left: 2cm;
+ font-size: green;
+}
+
+.verde{
+  color: rgb(22, 136, 9);
+}
+
+.laranja{
+  color:#FFA500;
+}
+
+.vermelho{
+  color: red;
+}
+
+/* bary{
+  margin: 0px;
+  padding: 0px;
+} */
+
+div{
+  
+  background-color: #0d6360;
+}
+
+.libertadores{
+  color: rgb(76, 177, 33);
+  text-align: center;
+}
+
+.copaAmerica{
+  color: #f7b438;
+  text-align: center;
+}
+
+.rebaixados{
+  color: red;
+  text-align: center;
 }
